2018-01-29 Inge Wortel <ingewortel@gmail.com>
	
	* src/CPMStats.js (centroids2D,centroids3D) : fixed eslint no-console error.

2018-01-29 Inge Wortel <ingewortel@gmail.com>

	* ChangeLog : created.

	* src/CPM.js (general) : merged with another version optimized for speed (fewer pixel coordinate to index conversions; see also other changes). Commented code and reordered some functions for easier annotation. Removed support for the torus option (linked grid border) and for cell nuclei. Removed use of LAMBDA_DIR. 

	* src/CPM.js (this.id2t) : attribute id2t renamed to t2k for consistency with variable naming in other functions (t for the cell id, k for the cellkind). Replaced calls to this.t2k with the functions cellKind and setCellKind wherever possible.

	* src/CPM.js (this.centerofmass) : attribute centerofmass removed. The center of mass of each cell is no longer updated for every copy attempt, because this requires internal conversions from pixel index to coordinates (slow). Instead, the center of mass can still be computed for every MCS - see src/CPMstats.js.

	* src/CPM.js (getCenterOfMass) : removed, because no longer needed now that center of mass is not tracked internally.

	* src/CPM.js (pixt,pixk) : modified and renamed to pixti, pixki. The new functions work on pixel index i rather than coordinates p. pixt is still available for compatibility with other classes, but calls pixti internally.

	* src/CPM.js (perconstraint) : modified and renamed to perconstrainti, which works on pixel index rather than coordinates p. Perimeter now only monitored for the two cells involved in the copy attempt (old type and new type) rather than all types in the neighborhood (because the perimeter can only change for the cells that gain or lose a pixel, tracking perimeter for other cells is redundant).

	* src/CPM.js (activityAtArith, activityAtGeom) : modified to use pixel index i rather than coordinates p.
