@@ -5,15 +5,6 @@
 function CPMStats( C ){
 	this.C = C
 	this.ndim = this.C.ndim
-	if( this.ndim == 2 ){
-		this.getCentroids = this.getCentroids2D
-		this.centroids = this.centroids2D
-		this.getCentroidOf = this.getCentroidOf2D
-	} else {
-		this.getCentroids = this.getCentroids3D
-		this.centroids = this.centroids3D
-		this.getCentroidOf = this.getCentroidOf3D
-	}
 }
 
 CPMStats.prototype = {
@@ -33,108 +24,142 @@ CPMStats.prototype = {
 		}
 		return r
 	},
-	// center of mass of cell t 
-	getCentroidOf2D : function( t ){
-		var j, cx, cy
-
-		// array of pixels belonging to cell t
-		var cpt = this.cellpixels()[t]
+	// For computing mean and variance with online algorithm
+	updateOnline : function( aggregate, value ){
 		
-		// loop over pixels and sum up coordinates
-		for( j = 0; j < cpt.length ; j++ ){
-			cx += cpt[j][0]
-			cy += cpt[j][1]
-		}
+		var delta, delta2
 
-		// divide to get mean coordinates
-		cx /= j; cy /= j
+		aggregate.count ++
+		delta = value - aggregate.mean
+		aggregate.mean += delta/aggregate.count
+		delta2 = value - aggregate.mean
+		aggregate.sqd += delta*delta2
 
-		return [cx, cy]
+		return aggregate
 	},
-	getCentroidOf3D : function( t ){
-		var j, cx, cy, cz
+	newOnline : function(){
+		return( { count : 0, mean : 0, sqd : 0 } ) 
+	},
+	// return mean and variance of coordinates in a given dimension for cell t
+	// (dimension as 0,1, or 2)
+	cellStats : function( t, dim ){
 
-		// array of pixels belonging to cell t
-		var cpt = this.cellpixels()[t]
-		
-		// loop over pixels and sum up coordinates
-		for( j = 0; j < cpt.length ; j++ ){
-			cx += cpt[j][0]
-			cy += cpt[j][1]
-			cz += cpt[j][2]
+		var aggregate, cpt, j, stats
+
+		// the cellpixels object can be given as the third argument
+		if( arguments.length == 3){
+			cpt = arguments[2][t]
+		} else {
+			cpt = this.cellpixels()[t]
 		}
-		// divide to get mean coordinates
-		cx /= j; cy /= j; cz /= j
-		return [cx, cy, cz]
+
+		// compute using online algorithm
+		aggregate = this.newOnline()
+
+		// loop over pixels to update the aggregate
+		for( j = 0; j < cpt.length; j++ ){
+			aggregate = this.updateOnline( aggregate, cpt[j][dim] )
+		}
+
+		// get mean and variance
+		stats = { mean : aggregate.mean, variance : aggregate.sqd / ( aggregate.count - 1 ) }
+		return stats
+	},
+	// get the length (variance) of cell in a given dimension
+	getLengthOf : function( t, dim ){
+		
+		// get mean and sd in x direction
+		var stats = this.cellStats( t, dim )
+		return stats.variance
+
+	},
+	// get the range of coordinates in dim for cell t
+	getRangeOf : function( t, dim ){
+
+		var minc, maxc, cpt, j
+
+		// the cellpixels object can be given as the third argument
+		if( arguments.length == 3){
+			cpt = arguments[2][t]
+		} else {
+			cpt = this.cellpixels()[t]
+		}
+
+		// loop over pixels to find min and max
+		minc = cpt[0][dim]
+		maxc = cpt[0][dim]
+		for( j = 1; j < cpt.length; j++ ){
+			if( cpt[j][dim] < minc ) minc = cpt[j][dim]
+			if( cpt[j][dim] > maxc ) maxc = cpt[j][dim]
+		}
+		
+		return( maxc - minc )		
+
+	},
+	// center of mass of cell t
+	// the cellpixels object can be given as the second argument
+	getCentroidOf : function( t ){
+		var j, dim, cvec, cpt
+		if( arguments.length == 2 ){
+			cpt = arguments[1][t]
+		} else {
+			cpt = this.cellpixels()[t]
+		}
+		// fill the array cvec with zeros first
+		cvec = Array.apply(null, Array(this.ndim)).map(Number.prototype.valueOf,0)
+
+		// loop over pixels to sum up coordinates
+		for( j = 0; j < cpt.length; j++ ){
+			// loop over coordinates x,y,z
+			for( dim = 0; dim < this.ndim; dim++ ){
+				cvec[dim] += cpt[j][dim]
+			}		
+		}
+
+		// divide to get mean
+		for( dim = 0; dim < this.ndim; dim++ ){
+			cvec[dim] /= j
+		}
+
+		return cvec
 	},
 	// center of mass (return)
-	getCentroids2D : function(){
+	getCentroids : function(){
 		var cp = this.cellpixels()
-		var tx = Object.keys( cp ), cx, cy, i, j, r = []
-		for( i = 0 ; i < tx.length ; i ++ ){
-			cx=0; cy=0
-			// loop over the cells in cp
-			for( j = 0 ; j < cp[tx[i]].length ; j ++ ){
-				cx += cp[tx[i]][j][0]
-				cy += cp[tx[i]][j][1]
+		var tx = Object.keys( cp )
+		var cvec, r = [], current, i
+
+		// loop over the cells in tx to get their centroids
+		for( i = 0; i < tx.length; i++ ){
+			cvec = this.getCentroidOf( tx[i] )
+
+			// output depending on ndim
+			current = { id : tx[i], x : cvec[0], y : cvec[1] }
+			if( this.ndim == 3 ){
+				current["z"] = cvec[2]			
 			}
-			cx /= j; cy /= j
-			r.push( { id : tx[i], x : cx, y : cy } )
+			r.push( current )
 		}
-		return r		
-	},
-	getCentroids3D : function(){
-		var cp = this.cellpixels()
-		var tx = Object.keys( cp ), cx, cy, cz, i, j, r = []
-		for( i = 0 ; i < tx.length ; i ++ ){
-			cx=0; cy=0; cz=0
-			for( j = 0 ; j < cp[tx[i]].length ; j ++ ){
-				cx += cp[tx[i]][j][0]
-				cy += cp[tx[i]][j][1]
-				cz += cp[tx[i]][j][2]
-			}
-			cx /= j; cy /= j ; cz /= j
-			r.push( { id : tx[i], x : cx, y : cy, z : cz } )
-		}
-		return r		
+		return r
 	},
 	// center of mass (print to console)
-	centroids3D : function(){
+	centroids : function(){
 		var cp = this.cellpixels()
-		var tx = Object.keys( cp ), cx, cy, cz, i, j
-		for( i = 0 ; i < tx.length ; i ++ ){
-			cx=0; cy=0; cz=0
-			for( j = 0 ; j < cp[tx[i]].length ; j ++ ){
-				cx += cp[tx[i]][j][0]
-				cy += cp[tx[i]][j][1]
-				cz += cp[tx[i]][j][2]
-			}
-			cx /= j; cy /= j ; cz /= j
+		var tx = Object.keys( cp )	
+		var cvec, i
+
+		// loop over the cells in tx to get their centroids
+		for( i = 0; i < tx.length; i++ ){
+			cvec = this.getCentroidOf( tx[i] )
+
 			// eslint-disable-next-line no-console
-			console.log( tx[i] +"\t"+ 
-				this.C.time +"\t"+
-				this.C.time +"\t"+
-				cx  +"\t"+
-				cy  +"\t"+
-				cz )
-		}
-	},
-	centroids2D : function(){
-		var cp = this.cellpixels()
-		var tx = Object.keys( cp ), cx, cy, i, j
-		for( i = 0 ; i < tx.length ; i ++ ){
-			cx=0; cy=0
-			for( j = 0 ; j < cp[tx[i]].length ; j ++ ){
-				cx += cp[tx[i]][j][0]
-				cy += cp[tx[i]][j][1]
-			}
-			cx /= j; cy /= j 
-			// eslint-disable-next-line no-console
-			console.log( tx[i] +"\t"+ 
-				this.C.time +"\t"+
-				this.C.time +"\t"+
-				cx  +"\t"+
-				cy  )
+			console.log( 
+				tx[i] + "\t" +
+				this.C.time + "\t" +
+				this.C.time + "\t" +
+				cvec.join("\t")
+			)
+
 		}
 	},
 	// returns an object with a key for each celltype (identity). 
